0. Pessoas agrupadas por cargo - Locale